src/styles.css
:root {
  --primary: #e0afa0;
  --hover: #d49484;
  --secondary: #6c757d;
  --bgcolor: #f8f9fa;
  --regtext: #333333;
  --hitext: #d2b48c;
}

/* Reset */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

button,
input,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
}

/* Body Styles */
body {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  font-family: Helvetica, Arial, system-ui;
  line-height: 1.5;
  background: linear-gradient(to bottom, var(--bgcolor), #ececec);
}

h2 {
  margin: 15px;
  color: var(--bgcolor);
  background-color: var(--primary);
  padding: 15px;
  width: 13rem;
  border-radius: 12px;
}

ul {
  display: flex;
  gap: 10px;
  list-style-type: none;
  justify-content: center;
}

button {
  background-color: var(--primary);
  color: white;
  font-size: clamp(0.5rem, 1rem, 45rem);
  font-weight: bold;
  width: 6rem;
  height: 2rem;
  border-style: none;
  cursor: pointer;
  border-radius: 8px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

button:hover {
  background-color: var(--hover);
  transform: translateY(-2px);
  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
}

#logo {
  position:absolute;
  top: 1%;
  left: 1%;
  /* transform: rotate(270deg); */
  width: 200px;
  height: auto;
}

.header {
  background-color: var(--bgcolor);
  margin: 1rem;
}

#content {
  width: 60vw;
  margin: 1rem;
  background-color: var(--bgcolor);
}

.box {
  display: flex;
  gap: 10px;
  margin: 10px;
  padding: 10px;
  border: 1px solid var(--secondary);
  border-radius: 10px;
  background-color: white;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
}

.box:hover {
  transform: scale(1.02);
  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
}

.box-img {
  width: 30%;
  max-width: 300px;
  height: auto;
}

.box h3,
p {
  color: var(--regtext);
}

.testimony-box {
  gap: 10px;
  margin: 10px;
  padding: 20px;
  border: 1px solid var(--secondary);
  border-radius: 10px;
  background-color: var(--primary);
  color: var(--bgcolor);
  font-style: italic;
}

.footer {
  margin: 1rem;
  align-self: flex-end;
  display: flex;
  justify-content: space-between;
}

